--- a/BookingSoftware/App.csproj
+++ b/BookingSoftware/App.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\Customers.cs" />
     <Compile Include="Model\Interface\ICustomer.cs" />
+    <Compile Include="Model\Utlity\FrameNavigation.cs" />
     <Compile Include="Model\Utlity\RelayCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
@@ -115,6 +116,9 @@
     </Compile>
     <Compile Include="View\ResetAccountView.xaml.cs">
       <DependentUpon>ResetAccountView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\TestCustomerPage.xaml.cs">
+      <DependentUpon>TestCustomerPage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -148,6 +152,10 @@
     <Page Include="View\LoginPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\TestCustomerPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
