--- a/BookingSoftware/App.csproj
+++ b/BookingSoftware/App.csproj
@@ -97,26 +97,19 @@
     </Compile>
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\Customers.cs" />
-    <Compile Include="Model\Interface\ICustomer.cs" />
+    <Compile Include="Model\Interface\IUser.cs" />
+    <Compile Include="Model\SalesEmployee.cs" />
+    <Compile Include="Model\SuperAdmin.cs" />
+    <Compile Include="Model\User.cs" />
+    <Compile Include="Model\Utlity\DataValidation.cs" />
     <Compile Include="Model\Utlity\FrameNavigation.cs" />
     <Compile Include="Model\Utlity\RelayCommand.cs" />
+    <Compile Include="Persistency\ActiveUserSingleton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="View\ForgetPasswordPage.xaml.cs" />
     <Compile Include="View\LoginPage.xaml.cs" />
-    <Compile Include="View\CreateAccountView.xaml.cs">
-      <DependentUpon>CreateAccountView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\LoginView.xaml.cs">
-      <DependentUpon>LoginView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\MainView.xaml.cs">
-      <DependentUpon>MainView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\ResetAccountView.xaml.cs">
-      <DependentUpon>ResetAccountView.xaml</DependentUpon>
-    </Compile>
     <Compile Include="View\TestCustomerPage.xaml.cs">
       <DependentUpon>TestCustomerPage.xaml</DependentUpon>
     </Compile>
@@ -165,28 +158,14 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Animations">
       <Version>5.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Prism.Core">
+      <Version>7.1.0.431</Version>
+    </PackageReference>
+    <PackageReference Include="Prism.Windows">
+      <Version>7.0.0.336-pre</Version>
+    </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Persistency\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="View\CreateAccountView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\LoginView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\MainView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\ResetAccountView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
