--- a/BookingSoftware/App.csproj
+++ b/BookingSoftware/App.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Model\Utlity\FrameNavigation.cs" />
     <Compile Include="Model\Utlity\RelayCommand.cs" />
     <Compile Include="Persistency\ActiveUserSingleton.cs" />
+    <Compile Include="Persistency\AuthentificationPersistency.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
