[ADD] : Customer Landing Page View, Page Navigaton

--- a/BookingSoftware/App.csproj
+++ b/BookingSoftware/App.csproj
@@ -109,11 +109,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
+    <Compile Include="View\CustomerLandingPage.xaml.cs">
+      <DependentUpon>CustomerLandingPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\ForgetPasswordPage.xaml.cs" />
     <Compile Include="View\LoginPage.xaml.cs" />
-    <Compile Include="View\TestCustomerPage.xaml.cs">
-      <DependentUpon>TestCustomerPage.xaml</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -125,6 +125,7 @@
     <Content Include="Assets\1.jpg" />
     <Content Include="Assets\2.png" />
     <Content Include="Assets\3.jpg" />
+    <Content Include="Assets\background5.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -139,6 +140,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="View\CustomerLandingPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\ForgetPasswordPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -146,10 +151,6 @@
     <Page Include="View\LoginPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="View\TestCustomerPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
