--- a/BookingSoftware/App.csproj
+++ b/BookingSoftware/App.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\Customers.cs" />
     <Compile Include="Model\Interface\IUser.cs" />
+    <Compile Include="Model\Order.cs" />
     <Compile Include="Model\SalesEmployee.cs" />
     <Compile Include="Model\SuperAdmin.cs" />
     <Compile Include="Model\User.cs" />
@@ -106,6 +107,7 @@
     <Compile Include="Model\Utlity\RelayCommand.cs" />
     <Compile Include="Persistency\ActiveUserSingleton.cs" />
     <Compile Include="Persistency\AuthentificationPersistency.cs" />
+    <Compile Include="Persistency\OrdersPersistency.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
